--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,7 @@ langchain-core==0.3.74
 langchain-google-genai==2.1.9
 langchain-openai==0.3.30
 langchain-text-splitters==0.3.9
+langchain-postgres==0.0.15
 langsmith==0.4.14
 MarkupSafe==3.0.2
 marshmallow==3.26.1
